Update config.json with latest portfolio content

--- a/config.json
+++ b/config.json
@@ -61,7 +61,7 @@
     "title": "Professional Experience",
     "jobs": [
       {
-        "company": "Your Company Name",
+        "company": "Progress Software",
         "role": "Your Job Title",
         "date": "Start Date - Present",
         "responsibilities": [
